// qdrant_service.proto - Qdrant Vector Database gRPC Service
// High-performance vector search with filtering and hybrid search capabilities
syntax = "proto3";

package isa.qdrant;

option go_package = "github.com/isa-cloud/isa_cloud/api/proto/qdrant";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// ========================================
// Qdrant Vector Database Service
// ========================================
// Provides centralized vector storage and search with:
// - High-performance nearest neighbor search
// - Payload filtering and hybrid search
// - Multi-vector support per point
// - Quantization for memory optimization
// - Distributed collections

service QdrantService {
    // ========== Collection Management ==========

    // CreateCollection - Create a new vector collection
    rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse);

    // ListCollections - List all collections
    rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse);

    // GetCollectionInfo - Get detailed collection information
    rpc GetCollectionInfo(GetCollectionInfoRequest) returns (GetCollectionInfoResponse);

    // UpdateCollection - Update collection parameters
    rpc UpdateCollection(UpdateCollectionRequest) returns (UpdateCollectionResponse);

    // DeleteCollection - Delete a collection
    rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse);

    // CreateCollectionAlias - Create collection alias
    rpc CreateCollectionAlias(CreateCollectionAliasRequest) returns (CreateCollectionAliasResponse);

    // ========== Point (Vector) Operations ==========

    // UpsertPoints - Insert or update points (vectors with payload)
    rpc UpsertPoints(UpsertPointsRequest) returns (UpsertPointsResponse);

    // GetPoints - Retrieve points by IDs
    rpc GetPoints(GetPointsRequest) returns (GetPointsResponse);

    // DeletePoints - Delete points by IDs or filter
    rpc DeletePoints(DeletePointsRequest) returns (DeletePointsResponse);

    // UpdatePayload - Update payload for points
    rpc UpdatePayload(UpdatePayloadRequest) returns (UpdatePayloadResponse);

    // DeletePayload - Delete specific payload fields
    rpc DeletePayload(DeletePayloadRequest) returns (DeletePayloadResponse);

    // ClearPayload - Clear all payload data
    rpc ClearPayload(ClearPayloadRequest) returns (ClearPayloadResponse);

    // ========== Search Operations ==========

    // Search - Vector similarity search
    rpc Search(SearchRequest) returns (SearchResponse);

    // SearchBatch - Batch vector search
    rpc SearchBatch(SearchBatchRequest) returns (SearchBatchResponse);

    // Recommend - Recommendation based on positive/negative examples
    rpc Recommend(RecommendRequest) returns (RecommendResponse);

    // Discover - Discovery search (find points similar to positive but different from negative)
    rpc Discover(DiscoverRequest) returns (DiscoverResponse);

    // Scroll - Iterate through all points
    rpc Scroll(ScrollRequest) returns (ScrollResponse);

    // Count - Count points matching filter
    rpc Count(CountRequest) returns (CountResponse);

    // ========== Index Management ==========

    // CreateFieldIndex - Create payload field index
    rpc CreateFieldIndex(CreateFieldIndexRequest) returns (CreateFieldIndexResponse);

    // DeleteFieldIndex - Delete payload field index
    rpc DeleteFieldIndex(DeleteFieldIndexRequest) returns (DeleteFieldIndexResponse);

    // ========== Snapshot Operations ==========

    // CreateSnapshot - Create collection snapshot
    rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);

    // ListSnapshots - List available snapshots
    rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);

    // DeleteSnapshot - Delete a snapshot
    rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse);

    // ========== Health & Stats ==========

    // HealthCheck - Service health check
    rpc HealthCheck(QdrantHealthCheckRequest) returns (QdrantHealthCheckResponse);

    // GetClusterInfo - Get cluster information
    rpc GetClusterInfo(GetClusterInfoRequest) returns (GetClusterInfoResponse);
}

// ========================================
// Data Structures
// ========================================

// Vector representation
message Vector {
    repeated float data = 1;                         // Vector values
}

// Multi-vector representation (named vectors)
message NamedVectors {
    map<string, Vector> vectors = 1;                 // Named vector fields
}

// Point (vector with payload and ID)
message Point {
    oneof id {
        uint64 num_id = 1;
        string str_id = 2;
    }
    oneof vectors {
        Vector vector = 3;                           // Single vector
        NamedVectors named_vectors = 4;              // Multiple named vectors
    }
    google.protobuf.Struct payload = 5;              // Associated metadata
}

// Scored point (search result)
message ScoredPoint {
    Point point = 1;
    float score = 2;                                 // Similarity score
    google.protobuf.Value version = 3;               // Point version
}

// Filter conditions
message Filter {
    repeated FilterCondition must = 1;               // AND conditions
    repeated FilterCondition should = 2;             // OR conditions
    repeated FilterCondition must_not = 3;           // NOT conditions
}

message FilterCondition {
    string field = 1;                                // Payload field name
    oneof condition {
        MatchCondition match = 2;
        RangeCondition range = 3;
        GeoBoundingBoxCondition geo_bounding_box = 4;
        GeoRadiusCondition geo_radius = 5;
        ValuesCountCondition values_count = 6;
    }
}

message MatchCondition {
    oneof match_value {
        string keyword = 1;
        int64 integer = 2;
        bool boolean = 3;
    }
}

message RangeCondition {
    optional double gt = 1;                          // Greater than
    optional double gte = 2;                         // Greater than or equal
    optional double lt = 3;                          // Less than
    optional double lte = 4;                         // Less than or equal
}

message GeoBoundingBoxCondition {
    GeoPoint top_left = 1;
    GeoPoint bottom_right = 2;
}

message GeoRadiusCondition {
    GeoPoint center = 1;
    double radius_meters = 2;
}

message GeoPoint {
    double lat = 1;
    double lon = 2;
}

message ValuesCountCondition {
    optional uint64 lt = 1;
    optional uint64 lte = 2;
    optional uint64 gt = 3;
    optional uint64 gte = 4;
}

// Distance metrics - aligned with Qdrant official proto
enum Distance {
    DISTANCE_UNKNOWN = 0;       // Unknown/unspecified distance
    DISTANCE_COSINE = 1;        // Cosine similarity
    DISTANCE_EUCLID = 2;        // Euclidean distance
    DISTANCE_DOT = 3;           // Dot product
    DISTANCE_MANHATTAN = 4;     // Manhattan distance
}

// Vector parameters
message VectorParams {
    uint64 size = 1;                                 // Vector dimension
    Distance distance = 2;                           // Distance metric
    optional HnswConfig hnsw_config = 3;
    optional QuantizationConfig quantization_config = 4;
}

message HnswConfig {
    uint64 m = 1;                                    // Number of edges per node
    uint64 ef_construct = 2;                         // Construction time search
    uint64 full_scan_threshold = 3;
}

message QuantizationConfig {
    oneof quantization {
        ScalarQuantization scalar = 1;
        ProductQuantization product = 2;
    }
}

message ScalarQuantization {
    enum ScalarType {
        INT8 = 0;
    }
    ScalarType type = 1;
    optional float quantile = 2;
    optional bool always_ram = 3;
}

message ProductQuantization {
    enum CompressionRatio {
        X4 = 0;
        X8 = 1;
        X16 = 2;
        X32 = 3;
        X64 = 4;
    }
    CompressionRatio compression = 1;
    optional bool always_ram = 2;
}

// ========================================
// Collection Management
// ========================================

message VectorsConfigParams {
    map<string, VectorParams> params = 1;
}

message CreateCollectionRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    oneof vectors_config {
        VectorParams vector_params = 3;              // Single vector
        VectorsConfigParams named_vector_params = 4; // Multi-vector
    }
    optional uint32 shard_number = 5;
    optional uint32 replication_factor = 6;
    optional uint32 write_consistency_factor = 7;
    optional bool on_disk_payload = 8;
}

message CreateCollectionResponse {
    common.ResponseMetadata metadata = 1;

    bool success = 2;
}

message ListCollectionsRequest {
    common.RequestMetadata metadata = 1;
}

message ListCollectionsResponse {
    common.ResponseMetadata metadata = 1;

    repeated CollectionDescription collections = 2;
}

message CollectionDescription {
    string name = 1;
}

message GetCollectionInfoRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
}

message GetCollectionInfoResponse {
    common.ResponseMetadata metadata = 1;

    CollectionInfo info = 2;
}

message CollectionInfo {
    string status = 1;
    uint64 points_count = 2;
    uint64 segments_count = 3;
    google.protobuf.Struct config = 4;
    google.protobuf.Struct optimizer_status = 5;
}

message UpdateCollectionRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    optional uint32 optimizers_config = 3;
    optional google.protobuf.Struct params = 4;
}

message UpdateCollectionResponse {
    common.ResponseMetadata metadata = 1;

    bool success = 2;
}

message DeleteCollectionRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
}

message DeleteCollectionResponse {
    common.ResponseMetadata metadata = 1;

    bool success = 2;
}

message CreateCollectionAliasRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    string alias_name = 3;
}

message CreateCollectionAliasResponse {
    common.ResponseMetadata metadata = 1;

    bool success = 2;
}

// ========================================
// Point Operations
// ========================================

message UpsertPointsRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    repeated Point points = 3;
    optional bool wait = 4;                          // Wait for operation to complete
    optional string ordering = 5;                    // weak, medium, strong
}

message UpsertPointsResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

message GetPointsRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    repeated PointId ids = 3;
    optional bool with_payload = 4;
    optional bool with_vectors = 5;
}

message PointId {
    oneof id {
        uint64 num = 1;
        string str = 2;
    }
}

message GetPointsResponse {
    common.ResponseMetadata metadata = 1;

    repeated Point points = 2;
}

message PointIdList {
    repeated PointId ids = 1;
}

message DeletePointsRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    oneof selector {
        PointIdList ids = 3;
        Filter filter = 4;
    }
    optional bool wait = 5;
}

message DeletePointsResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

message UpdatePayloadRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    google.protobuf.Struct payload = 3;
    oneof selector {
        PointIdList ids = 4;
        Filter filter = 5;
    }
    optional bool wait = 6;
}

message UpdatePayloadResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

message DeletePayloadRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    repeated string keys = 3;                        // Payload keys to delete
    oneof selector {
        PointIdList ids = 4;
        Filter filter = 5;
    }
    optional bool wait = 6;
}

message DeletePayloadResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

message ClearPayloadRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    oneof selector {
        PointIdList ids = 3;
        Filter filter = 4;
    }
    optional bool wait = 5;
}

message ClearPayloadResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

// ========================================
// Search Operations
// ========================================

message SearchRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    Vector vector = 3;
    optional string vector_name = 4;                 // For named vectors
    optional Filter filter = 5;
    optional google.protobuf.Struct params = 6;      // Search params (hnsw_ef, exact, etc.)
    uint64 limit = 7;
    optional uint64 offset = 8;
    optional bool with_payload = 9;
    optional bool with_vectors = 10;
    optional float score_threshold = 11;
}

message SearchResponse {
    common.ResponseMetadata metadata = 1;

    repeated ScoredPoint result = 2;
}

message SearchBatchRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    repeated SearchRequest searches = 3;
}

message SearchBatchResponse {
    common.ResponseMetadata metadata = 1;

    repeated SearchResponse results = 2;
}

message RecommendRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    repeated PointId positive = 3;                   // Positive examples
    repeated PointId negative = 4;                   // Negative examples
    optional Filter filter = 5;
    uint64 limit = 6;
    optional uint64 offset = 7;
    optional bool with_payload = 8;
    optional bool with_vectors = 9;
    optional float score_threshold = 10;
    optional string strategy = 11;                   // average_vector, best_score
}

message RecommendResponse {
    common.ResponseMetadata metadata = 1;

    repeated ScoredPoint result = 2;
}

message DiscoverRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    PointId target = 3;                              // Target point
    repeated PointId context = 4;                    // Context points (positive/negative pairs)
    optional Filter filter = 5;
    uint64 limit = 6;
    optional uint64 offset = 7;
    optional bool with_payload = 8;
    optional bool with_vectors = 9;
}

message DiscoverResponse {
    common.ResponseMetadata metadata = 1;

    repeated ScoredPoint result = 2;
}

message ScrollRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    optional Filter filter = 3;
    optional uint32 limit = 4;
    optional PointId offset = 5;
    optional bool with_payload = 6;
    optional bool with_vectors = 7;
}

message ScrollResponse {
    common.ResponseMetadata metadata = 1;

    repeated Point points = 2;
    optional PointId next_page_offset = 3;
}

message CountRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    optional Filter filter = 3;
    optional bool exact = 4;
}

message CountResponse {
    common.ResponseMetadata metadata = 1;

    uint64 count = 2;
}

// ========================================
// Index Management
// ========================================

message CreateFieldIndexRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    string field_name = 3;
    optional string field_type = 4;                  // keyword, integer, float, geo, text
    optional google.protobuf.Struct field_index_params = 5;
    optional bool wait = 6;
}

message CreateFieldIndexResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

message DeleteFieldIndexRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    string field_name = 3;
    optional bool wait = 4;
}

message DeleteFieldIndexResponse {
    common.ResponseMetadata metadata = 1;

    string operation_id = 2;
    string status = 3;
}

// ========================================
// Snapshot Operations
// ========================================

message CreateSnapshotRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
}

message CreateSnapshotResponse {
    common.ResponseMetadata metadata = 1;

    string snapshot_name = 2;
    google.protobuf.Timestamp created_at = 3;
}

message ListSnapshotsRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
}

message ListSnapshotsResponse {
    common.ResponseMetadata metadata = 1;

    repeated SnapshotDescription snapshots = 2;
}

message SnapshotDescription {
    string name = 1;
    google.protobuf.Timestamp created_at = 2;
    uint64 size_bytes = 3;
}

message DeleteSnapshotRequest {
    common.RequestMetadata metadata = 1;

    string collection_name = 2;
    string snapshot_name = 3;
}

message DeleteSnapshotResponse {
    common.ResponseMetadata metadata = 1;

    bool success = 2;
}

// ========================================
// Health & Stats
// ========================================

message QdrantHealthCheckRequest {
    common.RequestMetadata metadata = 1;
}

message QdrantHealthCheckResponse {
    common.ResponseMetadata metadata = 1;

    bool healthy = 2;
    string version = 3;
}

message GetClusterInfoRequest {
    common.RequestMetadata metadata = 1;
}

message GetClusterInfoResponse {
    common.ResponseMetadata metadata = 1;

    google.protobuf.Struct cluster_info = 2;
}
